# aria-prime

./: .gitignore  .replit  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  DONOR_INVENTORY.md  FLAWS.md  GAP_AUDIT.md  README.md  replit.md
.github/workflows/: build-android.yml  lint.yml
android/: .gitignore  FIREBASE_STUDIO.md  PUSH_LOG.md  build.gradle  gradle.properties  gradlew  local.properties.template  settings.gradle
android/.github/workflows/: build-android.yml
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  FindOpenCL.cmake  aria_crash_handler.cpp  aria_math.cpp  llama_jni.cpp
android/app/src/main/kotlin/com/ariaagent/mobile/: MainActivity.kt  MainApplication.kt
android/app/src/main/kotlin/com/ariaagent/mobile/core/agent/: AgentLoop.kt  AppSkillRegistry.kt  GameDetector.kt  GameLoop.kt  TaskDecomposer.kt  TaskQueueManager.kt
android/app/src/main/kotlin/com/ariaagent/mobile/core/ai/: ChatContextBuilder.kt  LlamaEngine.kt  (+8 more)
android/app/src/main/kotlin/com/ariaagent/mobile/system/: AgentForegroundService.kt
android/app/src/main/kotlin/com/ariaagent/mobile/ui/: ARIAComposeApp.kt  ComposeMainActivity.kt
android/app/src/main/kotlin/expo/modules/: ExpoModulesPackageList.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/app/src/test/java/com/ariaagent/mobile/: SafetyConfigTest.kt  SessionStatsUiStateTest.kt
android/docs/: ARIA_REALITY_CHECK.md  ui-backend-audit.md
docs/: 01_FIRST_TIME_SETUP.md  02_HOW_TO_OPERATE.md  03_HOW_TO_USE.md  04_TEACH_AND_TRAIN.md  05_TROUBLESHOOTING.md  06_WEB_DASHBOARD.md  07_BUILD_AND_INSTALL.md  08_LOGGING.md  09_ANDROID_STUDIO_FROM_ZERO.md  ARIA_OPERATING_GUIDE.md  FIREBASE_STUDIO.md  MULTIPLATFORM_PLAN.md  README.md
donors/: README.md
donors/docs/: AII_COMPREHENSIVE_ISSUES_REPORT.md  AII_COORDINATED_AI_SYSTEM_COMPLETE.md  AII_COORDINATED_LOOP_SYSTEM.md  AII_IMPLEMENTATION_COMPLETE_REPORT.md  AII_IMPLEMENTATION_SUMMARY.md  AII_SYSTEMS_CHECK_REPORT.md
donors/labels/: README.md
donors/labels/labels/: adaptive_behavior_detection.txt  advanced_ai_detection.txt  cod_labels.txt  cod_mobile_specific.txt  combat_effects_extended.txt  environment_types_extended.txt  free_fire_specific.txt  freefire_labels.txt  game_identifier_labels.txt  general_game_labels.txt  item_types_extended.txt  pubg_labels.txt  pubg_mobile_specific.txt  ui_elements_extended.txt
donors/labels/ml_models_metadata/: combat_effects_detector_metadata.json  environment_detector_metadata.json  item_detector_metadata.json  models_manifest.json  ui_elements_detector_metadata.json
donors/labels/models/: README.txt  cod_mobile_labels.txt  codm_labels.txt  free_fire_labels.txt  freefire_labels.txt  general_labels.txt  pubg_labels.txt
donors/learning-video-java/: VideoProcessingResult.java  VideoProcessingStatus.java  VideoProcessor.java
donors/orchestration-components-java/: ActionRecommender.java  BatteryMonitor.java  BehaviorDetector.java  CommandProcessor.java  ContextAnalyzer.java
donors/orchestration-java/: CentralAIOrchestrator.java  CircuitBreaker.java  ComponentInterface.java  ComponentRegistry.java  ComponentStateSnapshot.java  DiffEngine.java  EventRouter.java  HealthMonitor.java  OrchestrationEvent.java  OrchestrationScheduler.java  ProblemSolvingBroker.java  ProblemTicket.java  StateDiff.java  ValidationContract.java
donors/perception-java/detection/: ContentRecognizer.java  ElementUtils.java  EnemyDetector.java  GameAppElementDetector.java  ObjectDetector.java  ObjectDetectorOptions.java  TextRecognizer.java  UIElement.java
donors/perception-java/ml/: ActionPrioritization.java  ActionPrioritizer.java  ActionSuggestion.java  AdvancedActionSequencer.java  Context.java  DeepRLModel.java  GameAction.java  GamePatternRecognizer.java  GameRuleUnderstanding.java  GameTrainer.java  GameType.java  ObjectDetectorOptions.java  OptimizedImageProcessor.java  PredictiveActionSystem.java  RuleExtractionSystem.java  TensorflowLiteObjectDetector.java  UserFeedbackSystem.java
donors/rl-algorithms-java/: Algorithm.java  DQN.java  DQNAlgorithm.java  DeepRLAlgorithm.java  KMeansClusteringAlgorithm.java  MetaLearningAlgorithm.java  PPOAlgorithm.java  QLearning.java  QLearningAlgorithm.java  RLAlgorithm.java  ReinforcementLearningAlgorithm.java  SARSAAlgorithm.java
donors/scheduler-java/: Action.java  ActionResult.java  ActionSequence.java  ActionType.java  Condition.java  ConditionOperator.java  ScheduleType.java  ScheduledTask.java  TaskPriority.java  TaskSchedulerManager.java  TaskStatus.java  TaskTriggerType.java  Trigger.java  TriggerType.java
donors/scheduler-java/executor/: ActionCallback.java  ActionExecutor.java  ActionHandler.java  ActionResult.java  ActionStatus.java  ApiCallActionHandler.java  ApiCallHandler.java  AppControlActionHandler.java  AppControlHandler.java  AppLaunchActionHandler.java  CustomActionHandler.java  EmailActionHandler.java  NotificationActionHandler.java  StandardizedActionHandler.java  StandardizedActionHandlerAdapter.java  SystemActionHandler.java  WaitActionHandler.java
donors/scheduler-java/executor/handlers/: ActionHandler.java  ApiCallHandler.java  AppControlHandler.java  CustomActionHandler.java  EmailHandler.java  NotificationHandler.java  SystemActionHandler.java  WaitHandler.java
donors/scheduler-java/model/: Action.java  ActionResult.java  ActionSequence.java  ActionType.java  Condition.java  ConditionOperator.java  RecurrencePattern.java  ScheduledTask.java  Task.java  TaskPriority.java  TaskResult.java  TaskScheduleType.java  TaskStatus.java  Trigger.java  TriggerType.java
scripts/: package.json  push.sh
scripts/logging/: README.md  build-with-logs.sh  parse-build-errors.sh  pull-app-logs.sh  pull-logcat.sh  symbolicate-native.sh
scripts/src/: push.ts
server/: serve.py
(+78 files in other folders)
